<resources>
    <string name="app_name">Diabet.Check</string>
    <string name="login">Claim Akun</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">or</string>
    <string name="register">Daftar Akun</string>
    <string name="name">Nama</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Ubah Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="hello">Hai,</string>
    <string name="default_text">Pengguna</string>
    <string name="logout">Logout</string>
    <string name="change_language">Ubah Bahasa</string>
    <string name="user_profile">Profil Kamu</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_field_your_name">Please field your name</string>
    <string name="please_field_your_confirm_password">Please field your confirm password</string>
    <string name="please_field_your_password_more_than_8">Please field your password more than 8</string>
    <string name="please_field_your_confirm_password_more_than_8">Please field your confirm password more than 8</string>
    <string name="your_password_didnt_match">Your password did\'nt match</string>
    <string name="please_field_your_old_password">Please field your old password</string>
    <string name="please_input_your_old_password_more_than_8">Please input your old password more than 8</string>
    <string name="please_field_your_new_password">Please field your new password</string>
    <string name="please_input_your_new_password_more_than_8">Please input your new password more than 8</string>
    <string name="please_field_your_confirm_new_password">Please field your confirm new password</string>
    <string name="please_input_your_confirm_new_password_more_than_8">Please input your confirm new password more than 8</string>
    <string name="success_change_pass">Congratulation, your password has been change</string>
    <string name="success_register">Congratulation, your account has been register</string>
    <string name="success_forgot_pass">Congratulation, your link reset password has been sent to your email, please check it!</string>
    <string name="please_field_your_email">Please field your email</string>
    <string name="please_use_valid_email">Please use valid email</string>
    <string name="please_field_your_password">Please field your password</string>
    <string name="from">from</string>
    <string name="icorporation">C22-PC381</string>
    <string name="deskripsi">Description :</string>
    <string name="penjelasan_jerawat">Penjelasan Jerawat</string>
    <string name="solusi">Solusi</string>
    <string name="penyebab">Penyebab</string>
    <string name="nama_acne">Nama Acne</string>
    <string name="don_t_have_an_account_register">Belum Punya Akun? Register</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="welcome_to_acnetect">Welcome di GlucoFit!</string>
    <string name="previewimage">Gambar Preview</string>
    <string name="camera">Camera</string>
    <string name="galery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="your_acne_classified_as">Your acne classified as:</string>
    <string name="detail_article">Detail Article</string>
    <string name="getting_know_acne_type">Artikel Untuk Kamu</string>
    <string name="blackhead_atau">Blackhead atau</string>
    <string name="see_more">Baca Artikel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pencegahan_diabetes_remaja">
    <![CDATA[
    <p>Pencegahan diabetes pada remaja dapat dilakukan dengan beberapa strategi yang disarankan oleh Organisasi Kesehatan Dunia (WHO):</p>
    <p><b>a) Makanan Seimbang dan Aktivitas Fisik</b></p>
    <p>&nbsp;&nbsp;(1) Makanan Seimbang: Konsumsi makanan seimbang yang rendah gula dan lemak jenuh sangat penting untuk mengurangi risiko diabetes. Kalangan remaja dapat memilih makanan yang kaya serat seperti buah-buahan, sayuran, dan biji-bijian.</p>
    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(2) Aktivitas Fisik: Melakukan aktivitas fisik secara teratur adalah salah satu cara efektif untuk mencegah diabetes. Setidaknya 30 menit setiap hari sudah cukup untuk membantu menjaga berat badan ideal dan meningkatkan sensitivitas insulin.</p>
    <p><b>b) Menghindari Risiko Berlebihan</b></p>
    <p>&nbsp;&nbsp;(1) Berat Badan Ideal: Menjaga berat badan ideal merupakan faktor utama dalam pencegahan diabetes. Remaja yang memiliki berat badan di atas rata-rata lebih rentan terhadap penyakit ini karena insulin pada tubuh tidak dapat menyerap gula dengan efektif.</p>
    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(2) Hindari Asap Rokok: Menghindari asap rokok juga sangat penting karena merokok tidak hanya menyebabkan peningkatan tekanan darah tetapi juga membuat tubuh kurang responsif terhadap insulin.</p>
    <p><br/>Berbagai penelitian telah mengeksplorasi strategi pencegahan yang berfokus pada modifikasi gaya hidup, intervensi edukasi, dan keterlibatan masyarakat. Tinjauan literatur ini mensintesis temuan dari artikel penulisan terbaru yang membahas pencegahan diabetes pada remaja.</p>
    <p><b>a) Aktivitas Fisik dan Pola Makan Sehat</b></p>
    <p>&nbsp;&nbsp;&nbsp;Remaja yang melakukan aktivitas fisik secara teratur memiliki risiko terkena diabetes yang jauh lebih rendah dibandingkan dengan mereka yang tidak. Secara khusus, kalangan remaja yang tidak melakukan aktivitas fisik memiliki risiko 3,198 kali lebih tinggi terkena diabetes melitus. Oleh karena itu pilihan makanan, terutama konsumsi makanan olahan, juga berkontribusi terhadap peningkatan faktor risiko diabetes.</p>
    <p><b>b) Deteksi dan Pemantauan Dini</b></p>
    <p>&nbsp;&nbsp;&nbsp;Deteksi dini melalui pemantauan gula darah secara teratur merupakan langkah pencegahan yang sangat penting banyak remaja yang tidak menyadari status kesehatan mereka terkait risiko diabetes. Konsultasi kesehatan dan pemeriksaan gula darah secara teratur dapat memfasilitasi identifikasi dini kondisi prediabetes, sehingga memungkinkan intervensi tepat waktu. Sebagai kesimpulan, strategi pencegahan yang efektif untuk diabetes pada remaja harus mencakup pendekatan multi-segi yang mencakup promosi aktivitas fisik, kebiasaan makan sehat, inisiatif pendidikan, keterlibatan masyarakat, dan praktik deteksi dini. Penulisan lanjutan sangat penting untuk menyempurnakan strategi ini dan mengatasi tantangan yang dihadapi dalam mengelola kesehatan mereka.
    ]]>
    </string>
    <string name="pencegahan_diabetes_pediabetes">
    <![CDATA[
    <p><b>a) Pencegahan Diabetes</b><br>
    &nbsp;Menurut WHO dan Kementerian Kesehatan Republik Indonesia (Kemenkes), pencegahan diabetes pada remaja dengan status pre-diabetes melibatkan beberapa strategi utama:</p>
    <p>&nbsp;&nbsp;(1) Strategi Pencegahan Menurut WHO<br>
    &nbsp;&nbsp;&nbsp;&nbsp;WHO merekomendasikan beberapa langkah untuk mencegah diabetes melitus tipe 2, terutama pada mereka yang memiliki risiko tinggi:</p>
    <p>&nbsp;&nbsp;&nbsp;(a) Penurunan Berat Badan: Penurunan berat badan sekitar 5–10% dapat sangat efektif dalam mencegah atau memperlambat kemunculan diabetes.<br>
    &nbsp;&nbsp;&nbsp;(b) Aktivitas Fisik: Meningkatkan aktivitas fisik hingga 150 menit per minggu, dibagi menjadi 3–4 kali seminggu, dapat memperbaiki resistensi insulin dan meningkatkan kadar HDL (kolesterol baik).<br>
    &nbsp;&nbsp;&nbsp;(c) Pola Makan Sehat: Mengonsumsi karbohidrat kompleks, sedikit lemak jenuh, dan tinggi serat larut dapat membantu menjaga kontrol gula darah. Asupan kalori harus ditargetkan untuk mencapai berat badan ideal.<br>
    &nbsp;&nbsp;&nbsp;(d) Edukasi Kesehatan: Mengikuti pendidikan kesehatan yang tepat dapat membantu pencegahan terjadinya penyakit diabetes melitus dan komplikasinya. Eduksi yang efektif dapat meningkatkan kesadaran dan perilaku sehat remaja.</p>
    <p><br/>&nbsp;&nbsp;(2) Strategi Pencegahan Menurut Kemenkes<br>
    &nbsp;&nbsp;&nbsp;&nbsp;Kemenkes juga menekankan beberapa hal penting dalam pencegahan diabetes melitus tipe 2 pada remaja:</p>
    <p>&nbsp;&nbsp;&nbsp;(a) Mencapai Berat Badan Ideal: Salah satu upaya pencegahan primer adalah dengan mencapai berat badan ideal. Studi menunjukkan bahwa penurunan berat badan sekitar 6,5% setelah 4 minggu diet rendah kalori dapat menurunkan tekanan darah dan gula darah.<br>
    &nbsp;&nbsp;&nbsp;(b) Konsumsi Buah dan Sayur: Mengonsumsi buah dan sayur secara teratur dapat membantu mencegah diabetes karena keduanya memiliki banyak manfaat, termasuk mengurangi risiko kelebihan berat badan dan resistensi insulin.<br>
    &nbsp;&nbsp;(c) Aktif Berolahraga: Biasakan untuk berolahraga setidaknya 30 menit sehari untuk mencegah kelebihan berat badan dan mengurangi risiko diabetes. Berolahraga juga dapat menurunkan kadar gula darah dan menekan resistensi insulin.<br>
    &nbsp;&nbsp;&nbsp;(d) Pilihan Makanan dengan Indeks Glikemik Rendah/Sedang: Pilih makanan yang memiliki indeks glikemik rendah atau sedang untuk menghindari lonjakan gula darah yang tajam. Makanan dengan indeks glikemik tinggi seperti minuman manis dan bersoda dapat menyebabkan kenaikan gula darah yang cepat.</p>
    <p><b><br>b) Monitor Kadar Gula Darah</b><br>
    &nbsp;Aktivitas fisik, gaya hidup tidak sehat, makanan siap saji, ketidakpedulian melakukan pemeriksaan kadar gula darah secara rutin membuat kadar gula darah tidak terkontrol sehingga resiko diabetes melitus berkembang menjadi fenomena di kalangan Remaja.</p>
    <p>&nbsp;Menurut Kementerian Kesehatan Republik Indonesia (KEMENKES), pemantauan gula darah secara berkala sangat penting bagi remaja untuk mencegah dan mengendalikan diabetes. Berikut beberapa aspek penting untuk remaja dalam mengendalikan kadar gula darah:</p>
    <p>&nbsp;&nbsp;(1) Deteksi Dini: Pemeriksaan kadar gula darah secara berkala dapat membantu mendeteksi diabetes dini, terutama pada remaja yang rentan terhadap diabetes tipe 2. Hal ini dapat mencegah komplikasi yang tidak diinginkan dan memastikan kontrol kadar gula darah yang tepat.<br>
    &nbsp;&nbsp;(2) Gejala Awal: Gejala awal diabetes pada remaja mungkin tidak tampak langsung, tetapi dapat ditandai dengan kadar gula darah yang tinggi meski belum cukup tinggi untuk diklasifikasikan sebagai diabetes. Ini disebut pra-diabetes, yang merupakan alarm untuk menjaga pola makan dan lifestyle.<br>
    &nbsp;&nbsp;(3) Pola Makan dan Lifestyle: Untuk mencegah diabetes, remaja harus mempertahankan berat badan ideal, konsumsi buah dan sayur yang cukup, dan aktif berolahraga. Pola makan yang seimbang dan lifestyle yang sehat dapat membantu menghindari risiko tinggi kadar kolesterol darah dan obesitas, faktor-faktor yang meningkatkan risiko diabetes tipe 2.<br>
    &nbsp;&nbsp;(4) Teknologi Pemantauan Gula Darah: Teknologi digitalisasi juga dipromosikan untuk memantau kadar gula darah secara real-time, terutama bagi penderita diabetes tipe 1 maupun tipe 2. CGM dapat memberikan informasi yang lebih detail tentang fluktuasi kadar gula darah dan membantu dalam pengobatan yang lebih efektif.</p>
    ]]>
    </string>
</resources>