<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_user"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.user.UserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:contentInsetStartWithNavigation="0dp"
                android:contentInsetStart="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetEndWithActions="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">


                <ImageButton
                    android:id="@+id/btn_close_user"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/rounded_button"
                    android:src="@drawable/ic_back"
                    android:layout_marginStart="@dimen/normal_100"
                    app:tint="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/tv_title_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/gilroy_bold"
                    android:layout_gravity="center"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/normal_100"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/normal_100"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar_user"
                    android:layout_width="@dimen/image_user"
                    android:layout_height="@dimen/image_user"
                    android:src="@drawable/logo2"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintTop_toBottomOf="@id/guideline_start"
                    app:layout_constraintBottom_toBottomOf="@id/guideline_end"/>

                <TextView
                    android:id="@+id/tv_name_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Akun Kamu"
                    android:fontFamily="@font/gilroy_bold"
                    android:textAlignment="center"
                    android:textSize="@dimen/h5"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/normal_125"
                    app:layout_constraintTop_toBottomOf="@id/iv_avatar_user"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

                <TextView
                    android:id="@+id/tv_email_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_text"
                    tools:text="emailuser@gmail.com"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/gilroy_regular"
                    android:textSize="@dimen/subtitle_1"
                    android:layout_marginTop="@dimen/normal_75"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_user"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_logout_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:fontFamily="@font/gilroy_bold"
                    android:textSize="14dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_btn_auth_red"
                    android:layout_marginBottom="@dimen/normal_100"
                    android:layout_marginStart="@dimen/small_50"
                    android:layout_marginEnd="@dimen/small_50"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_change_language_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_language"
                    android:fontFamily="@font/gilroy_bold"
                    android:textSize="14dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_btn_auth_primary"
                    android:layout_marginBottom="@dimen/normal_100"
                    android:layout_marginStart="@dimen/small_50"
                    android:layout_marginEnd="@dimen/small_50"
                    app:layout_constraintBottom_toTopOf="@id/btn_logout_user"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_change_password_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:fontFamily="@font/gilroy_bold"
                    android:textSize="14dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_btn_auth_primary"
                    android:layout_marginBottom="@dimen/normal_100"
                    android:layout_marginStart="@dimen/small_50"
                    android:layout_marginEnd="@dimen/small_50"
                    app:layout_constraintBottom_toTopOf="@id/btn_change_language_user"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
