<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.changepassword.ChangePasswordActivity">

    <!-- AppBarLayout for the top bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_change_password"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:elevation="0dp"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/btn_close_change_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/rounded_button"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_marginStart="@dimen/normal_100"
                app:tint="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tvDetailTitleBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/gilroy_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_close_change_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/appbar_change_password"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/normal_100">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_change_password"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/h5"
                android:layout_marginTop="@dimen/normal_100"/>

            <!-- Old Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/et_old_password_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_border"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/old_password"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- New Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/normal_100"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/et_new_password_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_border"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/new_password"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm New Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/normal_100"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/et_confirm_new_password_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_border"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/confirm_new_password"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:fontFamily="@font/gilroy_bold"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn_auth_primary"
                android:layout_marginTop="@dimen/normal_175"
                android:layout_marginStart="@dimen/small_50"
                android:layout_marginEnd="@dimen/small_50"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
